# minisearch

./: Cargo.toml  README.md
examples/: basic.rs
src/: document.rs  index.rs  lib.rs  main.rs  query.rs  storage.rs  tokenizer.rs
